# claude

./: .gitignore  CLAUDE.md  CURRICULUM.md  LANGUAGE.md  PEDAGOGY.md  PROJECT.md  README.md  TEMPLATE.md  package.json  pyproject.toml
src/: cli.py  index.js
tests/: index.test.js  test_cli.py
