[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-cli"
version = "0.1.0"
description = "A simple CLI tool demonstrating Claude Code best practices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]

[project.scripts]
claude-cli = "src.cli:main"