[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"  # TODO: Replace with your package name
version = "0.1.0"
description = "Your project description"  # TODO: Add your project description
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
    # Add your dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    # Add your development dependencies here
]

[project.scripts]
your-cli-name = "src.cli:main"  # TODO: Replace with your CLI entrypoint name